add greate team section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -361,10 +361,40 @@
 }
 
 
-
-
 /* digital marketing section end */
 
+
+/* greate team section start */
+
+.market-great-team{
+    margin-top: 50px;
+}
+.market-great-team .cards-row .card{
+    border: none;
+    box-shadow: 0 3px 20px 0px rgba(0, 0, 0, 0.12);
+    cursor: pointer;
+}
+.market-great-team .cards-row .card:hover .card-footer{
+    border-bottom: 2px solid var(--red-one);
+    cursor: pointer;
+    transition-duration: 0.3s;
+}
+.market-great-team .cards-row .card-footer{
+    padding: 20px 0px;
+    background-color: #fff;
+    border-bottom: 2px solid transparent;
+}
+.market-great-team .cards-row .card-footer h6{
+    font-size: 22px;
+    font-weight: var(--bold);
+}
+.market-great-team .cards-row .card-footer p{
+    font-size: 16px;
+    color: #17161A;
+    font-weight: var(--light);
+}
+
+/* greate team section end */
 
 
 
@@ -675,6 +705,20 @@
 
 
     /* digital marketing section end */
+
+
+    /* greate team section start */
+
+
+    .market-great-team .cards-row .card-footer h6{
+        font-size: 18px;
+    }
+    .market-great-team .cards-row .card-footer p{
+        font-size: 15px;
+    }
+
+
+    /* greate team section end */
 }
 
 @media (min-width:1201px) AND (max-width:1400px) {
