--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -467,6 +467,19 @@
     margin-top: 50px;
     margin-bottom: 200px;
 }
+.market-subscribe-partner .subscribe-sec{
+    position: relative;
+}
+.market-subscribe-partner .subscribe-sec .subscribe-text{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 60%;
+    height: fit-content;
+    margin: auto;
+}
 .market-subscribe-partner .subscribe-sec .subscribe-text h6{
     font-size: 20px;
     font-weight: var(--bold);
@@ -475,40 +488,7 @@
 .market-subscribe-partner .subscribe-sec .subscribe-text h1{
     color: #fff;
 }
-.market-subscribe-partner .subscribe-sec .subscribe-text
-
-
-/* .market-subscribe-partner .main-row{
-    display: flex;
-    width: 100%;
-} */
-.market-subscribe-partner .main-row .left-sec{
-    width: 50%;
-    background-image: url("../images/Group\ 864.png");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 630px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.market-subscribe-partner .main-row .left-sec h6{
-    font-size: 20px;
-    font-weight: var(--bold);
-    color: var(--red-one);
-}
-.market-subscribe-partner .main-row .left-sec h1{
-    color: #fff;
-}
-
-.market-subscribe-partner .main-row .left-sec h1.outline-text{    
-    -webkit-text-fill-color: transparent;
-    -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: #fff;
-}
-
-.market-subscribe-partner .main-row .left-sec .subscribe-input{
+.market-subscribe-partner .subscribe-sec .subscribe-text .subscribe-input{
     padding: 1rem;
     background-color: #fff;
     border-radius: 50px;
@@ -517,7 +497,7 @@
     -ms-border-radius: 50px;
     -o-border-radius: 50px;
 }
-.market-subscribe-partner .main-row .left-sec .connect-btn{
+.market-subscribe-partner .subscribe-sec .subscribe-text .connect-btn{
     background-color: var(--red-one);
     font-size: 18px;
     font-weight: var(--bold);
@@ -532,7 +512,15 @@
     -o-border-radius: 20px;
 }
 
-
+.market-subscribe-partner .our-partner-sec .section-h45{
+    color: #fff;
+}
+.market-subscribe-partner .our-partner-sec{
+    background-color: #0F0F11;
+}
+.market-subscribe-partner .our-partner-sec .inner{
+    padding: 60px 35px;
+}
 /* subscribe partner section end */
 
 
@@ -668,6 +656,20 @@
     }
 
     /* video content section end */
+
+    /* subscribe partner section start */
+
+    .market-subscribe-partner .subscribe-sec .subscribe-text{
+        width: 70%;
+    }
+    .market-subscribe-partner .subscribe-sec .subscribe-text .subscribe-input{
+        padding: 0.375rem 0.75rem;
+    }
+    .market-subscribe-partner .subscribe-sec .subscribe-text .connect-btn{
+        font-size: 12px;
+        top: 3px;
+    }
+    /* subscribe partner section end */
 }
 
 @media (min-width: 578px) AND (max-width:768px){
@@ -687,6 +689,8 @@
 
 
     /* casse study section end */
+
+    
 }
 
 @media (min-width:769px) AND (max-width:990px) {
