--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -63,10 +63,17 @@ body {
     -ms-border-radius: 45px;
     -o-border-radius: 45px;
 }
+.global-p{
+    font-size: 22px;
+    color: #707070;
+}
 
 @media (max-width:768px) {
     .section-h45{
         font-size: 25px;
+    }
+    .global-p{
+        font-size: 16px;
     }
 }
 @media (min-width:769px) AND (max-width:990px) {
